syntax = "proto3";

package calculator;
option java_package = "com.proto.calculator";
option java_multiple_files = true;

message Calculator {
  int64 first_number = 1;
  int64 last_number = 2;
}

message CalculatorRequest {
  Calculator calculator = 1;
}

message CalculatorResponse {
  int64 result = 1;
}

message ComputeAverageRequest {
  int64 number = 1;
}

message ComputeAverageResponse {
  double average_computed = 1;
}


message FindMaximumRequest {
  int64 number = 1;
}

message FindMaximumResponse {
  int64 maximo = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}


service CalculatorService {
  //Unary API
  rpc Calculator(CalculatorRequest) returns (CalculatorResponse);

  //Client Streaming API
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse);

  //BiDi Streaming API
  rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse);

  //Error handling
  //Retornará uma exceção caso o numero enviado seja negativo
  //O erro enviado é do tipo INVALID_ARGUMENT
  rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}